# plasma-remotecontrollers

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  40-uinput.rules  CMakeLists.txt  README.md  joyclick.kdev4  joyclickrc  org.kde.joyclick.desktop.cmake  org.kde.plasma-remotecontrollers.desktop.cmake  org.kde.plasma.remotecontrollers.metainfo.xml  plasma-remotecontrollers.kdev4  plasma-remotecontrollers.notifyrc
.reuse/: dep5
cmake/: FindLibcec.cmake  FindXWiimote.cmake
icons/: CMakeLists.txt
kcm/: CMakeLists.txt  devicesmodel.cpp  devicesmodel.h  kcm_mediacenter_remotecontrollers.desktop  kcm_mediacenter_remotecontrollers.json  kcmdbusinterface.cpp  kcmdbusinterface.h  keydisplayprovider.cpp  keydisplayprovider.h  keymapmodel.cpp  keymapmodel.h  mediacenter_remotecontroller.desktop  remotecontroller.cpp  remotecontroller.h
kcm/package/: metadata.desktop
kcm/package/contents/ui/: DeviceMap.qml  DeviceSetupView.qml  main.qml
kcm/package/contents/ui/+mediacenter/: DeviceSetupView.qml  main.qml
kcm/package/contents/ui/delegates/: DeviceDelegate.qml  MapButtonDelegate.qml
kcm/ui/: DeviceSetupView.qml  main.qml  main_mediacenter.qml
kcm/ui/+mediacenter/: DeviceMap.qml  DeviceSetupView.qml  main.qml
kcm/ui/+mediacenter/delegates/: DeviceDelegate.qml
kcm/ui/delegates/: DeviceDelegate.qml  MapButtonDelegate.qml
kcm/ui/desktop/: DeviceMap.qml  DeviceSetupView.qml
kcm/ui/desktop/delegates/: DeviceDelegate.qml  MapButtonDelegate.qml
kcm/ui/mediacenter/: DeviceSetupSidebar.qml
po/ar/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/ast/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/be/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/ca/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/ca@valencia/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/cs/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/de/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/en_GB/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/eo/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/es/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/eu/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/fi/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/fr/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/ga/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/gl/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/he/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/hi/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/hu/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/ia/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/is/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/it/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/ja/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/ka/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/ko/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/lt/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/lv/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/nl/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/nn/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/pl/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/pt/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/pt_BR/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/ru/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/sa/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/sk/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/sl/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/sv/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/tr/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/uk/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/zh_CN/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
po/zh_TW/: kcm_mediacenter_remotecontrollers.po  plasma-remotecontrollers.po
src/: CMakeLists.txt  Messages.sh  abstractsystem.cpp  abstractsystem.h  constants.h  controller.h  controllermanager.cpp  controllermanager.h  controllermanagerdbusinterface.cpp  controllermanagerdbusinterface.h  device.cpp  device.h  devicesmodel.cpp  devicesmodel.h  devicetypes.h  kwinfakeinputsystem.cpp  kwinfakeinputsystem.h  main.cpp  notificationsmanager.cpp  notificationsmanager.h  notifier.cpp  notifier.h  org.kde.plasma.remotecontrollers.ControllerManager.xml  qmldir  remotecontrollers.kcfg  remotecontrollers.kcfgc  remotecontrollersplugin.cpp  remotecontrollersplugin.h  uinput.cpp  uinput.h  uinputsystem.cpp  uinputsystem.h
src/evdev/: evdevcontroller.cpp  evdevcontroller.h  evdevdbusinterface.cpp  evdevdbusinterface.h  org.kde.plasma-remotecontrollers.EVDEV.xml  org.kde.plasma.remotecontrollers.EVDEV.xml
src/joystick/: devicemodel.cpp  devicemodel.h  gamepad.cpp  gamepad.h  qjoystick.cpp  qjoystick.h
src/libcec/: ceccontroller.cpp  ceccontroller.h  org.kde.plasma-remotecontrollers.CEC.xml  org.kde.plasma.remotecontrollers.CEC.xml
src/sdljoystick/: devicemodel.cpp  devicemodel.h  ksdljoystick.cpp  ksdljoystick.h  prjoystick.cpp  prjoystick.h
src/wiimote/: wiimote.cpp  wiimote.h  wiimotecontroller.cpp  wiimotecontroller.h
